# school-projects

./: LICENSE  README.md
college/1st-year/DeeVizion/: .gitignore  DeeVizion.sln  README.md  doxyfile
college/1st-year/DeeVizion/DeeVizion/: App.xaml  App.xaml.cs  DeeVizion.csproj  MainWindow.xaml  MainWindow.xaml.cs
college/1st-year/DeeVizion/DeeVizionTests/: DeeVizionTests.csproj
college/1st-year/PlasmaPurgatory/: .gitignore  PlasmaPurgatory.sln  README.md
college/1st-year/PlasmaPurgatory/PlasmaPurgatory/: Bullet.cs  Collisions.cs  Enemy.cs  EntitiesUtils.cs  Game1.cs  GameOver.cs  Level.cs  Menu.cs  PlasmaPurgatory.csproj  Player.cs  Program.cs  SceneManager.cs  app.manifest
college/1st-year/SQTPDDE/: README.md
college/2nd-year/backend-real-estate/: .env  Cargo.toml
college/2nd-year/backend-real-estate/entity/: Cargo.toml
college/2nd-year/backend-real-estate/entity/src/: house.rs  lib.rs  prelude.rs
college/2nd-year/backend-real-estate/migration/: Cargo.toml
college/2nd-year/backend-real-estate/migration/src/: lib.rs  m20230101_000001_create_house_table.rs
college/2nd-year/backend-real-estate/src/: database.rs  house.rs  main.rs
college/2nd-year/event_poll/: .gitmodules  Dockerfile  README.md
college/2nd-year/s4-clubmed-sae/: .env.example  .gitignore  ApiClubMed.sln  README.md  docker-compose.yaml  nginx.conf  package-lock.json  postgres.Dockerfile
college/2nd-year/twitter_dravm/: .env.example  README.md  docker-compose.yaml  nginx.conf
college/2nd-year/twitter_dravm/rust_twitter/: Cargo.toml  Dockerfile
college/2nd-year/twitter_dravm/rust_twitter/data/: tweets.json  users.json
college/2nd-year/twitter_dravm/rust_twitter/migrator/: Cargo.toml
college/2nd-year/twitter_dravm/rust_twitter/migrator/src/: lib.rs
college/2nd-year/twitter_dravm/rust_twitter/src/: app.rs  config.rs  database.rs  main.rs
college/2nd-year/twitter_dravm/rust_twitter/src/models/: mod.rs  tweet.rs  user.rs
college/2nd-year/twitter_dravm/rust_twitter/src/routes/: tweet.rs  user.rs
college/2nd-year/twitter_dravm/rust_twitter/src/utils/: authenticate_request.rs  custom_response.rs  mod.rs  models.rs  pagination.rs  request_query.rs  token.rs
college/2nd-year/vinovim/: .gitattributes  .gitignore  README.md  build.sh  composer.json  docker-compose.yaml  package-lock.json  package.json
college/3rd-year/Maintenance-Applicative/: README.md  docker-compose.yaml
college/3rd-year/bth-mobile-RecipeRadar/: .gitignore  README.md  build.gradle.kts  config.properties.template  diagram.puml  keystore.jks  settings.gradle.kts
college/3rd-year/bth-performance-optimization-project1/: .gitignore  CheckoutMultipleWorktrees.sh  Makefile  README.md  filters.cpp  filters.hpp  matrix.cpp  matrix.hpp  ppm.cpp  verify.sh
college/3rd-year/bth-performance-optimization-project2/: .gitignore  Makefile  README.md
college/3rd-year/bth-unix-assignment1/: dns.blacklist.txt  log_sum.sh  notes.md
college/3rd-year/bth-unix-assignment2/: .gitignore  Makefile  README.md
college/3rd-year/bth-unix-assignment3/: .clang-tidy  .gitignore  Makefile  README.md  c-driver.sh  x86_64-driver.sh
college/3rd-year/portfolio/: index.html  styles.css
high-school/DMX/: .gitignore  README.md
(+914 files in other folders)
