[package]
name = "rust_twitter"
version = "0.1.0"
edition = "2021"
authors = ["Guillot Tony", "Michel Antonio"]
license = "GPL3"

[profile.release]
opt-level = 3
lto = true

[workspace]
members = [".", "migrator"]

[features]
default = ["migrator"]
migrator = ["dep:migrator"]

[dependencies]
migrator = { path = "migrator", optional = true }

axum = { version = "0.6.12", features = ["headers", "json"] }
axum-extra = "0.7.2"
axum-macros = "0.3.7"
log = "0.4.17"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_derive = "1.0.159"
mongodb = { version = "2.4.0", features = ["tokio-sync"] }
futures = "0.3.28"
bson = { version = "2.6.1", features = ["serde_with", "chrono-0_4"] }
chrono = "0.4.24"

wither = { git = "https://github.com/thedodd/wither" }
thiserror = "1.0.40"
async-trait = "0.1.68"
validator = { version = "0.16", features = ["derive"] }

 once_cell = "1.17.1"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
rand = "0.8.5"

bytes = "1.4.0"
mime = "0.3.17"
lazy_static = "1.4.0"
async_once = "0.2.6"
