[package]
name = "migrator"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migrator"
path = "src/lib.rs"

[dependencies]
mongodb-migrator = "0.1.8"
async-trait = "0.1.68"
anyhow = "1.0.70"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_derive = "1.0.159"
chrono = "0.4.24"
bson = { version = "2.6.1", features = ["serde_with", "chrono-0_4"] }
tokio = { version = "1.27.0", features = ["full"] }
mongodb = { version = "2.4.0", features = ["tokio-sync"] }
